# tradingbot

./: DOCUMENTATION.md  README.md  dashboard.py  extracter.py  invalid_text_rows.csv  main.py  market_fear_greed_index.csv  nas.csv  pyproject.toml  sector_mapping.json  sector_sentiment_report.csv  sentiment.py  signal_generator.py  signal_output.csv  signal_output.parquet  stock_data_for_valid_tickers.csv  stock_event_sentiment_report.csv  stock_final_scores.csv  stock_risk_sentiment_report.csv  stock_specific_sentiment.csv  ticker_corrections_cache.json
