[tool.poetry]
name = "trader"
version = "0.1.0"
description = "Stock sentiment and risk analysis tool"
authors = ["Jansty Lewis <janstylewis11@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
praw = "^7.7.1"
transformers = ">=4.45.2,<5.0.0"
pandas = ">=2.2.2,<3.0.0"
torch = ">=2.4.1,<3.0.0"
fuzzywuzzy = ">=0.18.0,<0.19.0"
nltk = ">=3.9.1,<4.0.0"
yfinance = ">=0.2.43,<0.3.0"
scikit-learn = ">=1.5.1,<2.0.0"
python-levenshtein = ">=0.25.1,<0.26.0"
plotly = ">=5.22.0,<6.0.0"
backtrader = ">=1.9.78.123,<2.0.0"
pyarrow = ">=17.0.0,<18.0.0"
fastparquet = ">=2024.5.0,<2025.0.0"
requests = "^2.32.3"
safetensors = "^0.5.3"
huggingface-hub = "^0.33.4"
streamlit = "^1.47.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"